--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.21.0",
     "ionicons": "^5.0.0",
+    "qs": "^6.9.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
@@ -45,7 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.4"
+    "@capacitor/cli": "2.4.4",
+    "@types/qs": "^6.9.5"
   },
   "description": "An Ionic project"
 }
